src/scss/_nav.scss
#election-bar-content {
    position: relative;
    width: 100%;
    padding-top: 115px;
    border-bottom: 1px solid #dadada;
    margin-bottom: 10px;
    background-color: #fafafa;
    z-index: 30;
    @include vendor-prefix(transition, padding 0.2s ease-out);
    @include tablet-min {
        margin-bottom: 30px;
        padding-top: 65px;
    }
    @include desktop {
        /* Collapsed Navigation Styles */
        position: absolute;
        top: 0;
        width: 100%;
    }
    /* Collapsed Navigation Styles */
    &.collapsed {
        position: fixed;        
        #elections-bar {
            min-height: 70px;
            .page-icon {
                top: -200px;
                opacity: 0;
            }
            .election-office-projection-heading {
                font-size: 20px;
                @include desktop {
                    font-size: 24px;
                }
            }
        }
    }
    @include mobile {
        .election-navigation.modal-on {
            position: absolute;
            z-index: 100;
        }
    }
}

#election-content {
    @include desktop {
        padding-top: 196px;
    }
}

.elections-overlay {
    display: none;
}

.oembed-linkout { display: none; }

// 280x175 - MobileWeb / iPhone
// 600x375 - Desktop
// 650x405 - iPad

#election-app.oembed {
    margin: 0;
    background: #fff;
    padding-bottom: 0;
    
    .elections-bar-nav { display: none; }
    
    #election-bar-content { 
        padding-left: 20px;
        padding-top: 10px;
    }
    
    #elections-bar {
        
        height: 60px;
        min-height: 60px;
        
        .elections-heading {
            margin-left: 90px;
            line-height: 1.1;
        }
        
        .election-state-subheading { 
            font-size: 14px;
            margin-bottom: 0;
            @include breakpoint(501) {
                margin-bottom: 8px;
            }
        }

        .election-office-projection-heading { font-size: 20px; }
        
        .page-icon {
            width: 70px;
            height: 50px;
            border-bottom: none;
            border-left: none;
            border-top: none;
            background: inherit;

            .icon {
                width: 60px;
                height: 60px;
                font-size: 40px;
                padding-top: 5px;
            }
        }
    }
    
    #election-content {
        padding-left: 20px;
        padding-right: 20px;
        top: 20px;
        
        .election-content-col { 
            border: none;
            width: 100%;
            padding: 0;
        }
    }
    
    .oembed-linkout { 
        display: inherit;
        position: fixed;
        bottom: 0; left: 0; right: 0;
        padding: 10px 20px;
        background: #fff;
        z-index: 10;
        line-height: 1.1;
        
        a { 
            font-size: 14px;
            font-weight: bold;
        }
        
        .oembed-link-logo {
            background-image: url('../img/oembed-logo.png');
            background-repeat: no-repeat;
            background-position: 85% 50%; 	
            background-size: 75px 14px;
            height: 14px;
            width: 75px;
            margin-top: 2px;
            display: inline-block;
        }
    }

    .updated {
        font-size: 10px;
    }

}

@include breakpointMax(350) {
    #election-app.oembed .balance-of-power-chart { margin-top: 5px; }
}

@include breakpointBetween(350, 500) {
    #election-app.oembed {
        .balance-of-power-chart { margin-top: 15px; }
        #election-content { top: 0px; }
    }
}

@includ breakpointMin(500) {
    #election-app.oembed {
        .balance-of-power-chart { margin-top: 30px; }
    }
}

@include breakpointMax(500) {
    #election-app.oembed {
        
        #election-content {
            top: 0px;
        }
        
        .elections-bar-left-col { padding: 0; }
        
        .oembed-linkout a { font-size: 10px; }
        
        ul.progress-stat-bar li { height: 25px; }
        ul.progress-stat-bar-slim li { height: 2px; }
        
        span.icon-dem-right, span.icon-rep-left { 
            font-size: 16px;
            margin-top: 4px;
        }
        
        .fifty-line { height: 28px; }
        
        #elections-bar {
            height: 36px;
            min-height: 36px;
        
            .elections-heading { margin-left: 55px; }
        
            .election-state-subheading { font-size: 10px; }
            .election-office-projection-heading { font-size: 16px; }

            .page-icon {
                width: 45px;
                height: 30px;

                .icon {
                    width: 40px;
                    height: 40px;
                    font-size: 24px;
                    padding-top: 5px;
                }
            }
        }
    }
}

@include tablet-min {
    #election-app.oembed {
        .page-icon-mini {
            display: none;
        }
    }
}
/* ... */

